[package]
name = "fscheme"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0"
mmtk = { git = "https://github.com/mmtk/mmtk-core" }
libc = "0.2"
parking_lot = "0.12"
parking_lot_core = "0.9"
cfg-if = "1.0"
errno = "0.3"
log = "0.4"
once_cell = "1.8"
num-traits = "0.2"
env_logger = "*"
elf = "0.7"
r7rs-parser = { git = "https://github.com/playxe/r7rs-parser" }
pretty = { version = "0.12", features = ["termcolor"]}
termcolor = "1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
    
] }



[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.package.mmtk]
opt-level = 2
