[package]
name = "capy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmtk = { git = "https://github.com/mmtk/mmtk-core"}
libc = "0.2"
parking_lot = "0.12"
paste = "1.0"
num-traits = "0.2"
num = "0.4"
once_cell = "1.18"
errno = "0.3"
cfg-if = "1.0"
rand = "0.8"
env_logger = "0.10"
log = "0.4"
ctor = "0.2"
parking_lot_core = "0.9"
rsetjmp = { git = "https://github.com/playXE/rsetjmp" }
ahash = "0.8"
macroassembler = { version = "1.0.5", features = ["x86-disasm"] }

[features]
compressed-oops = []
default = ["compressed-oops"]

